--- a/styles/style.css
+++ b/styles/style.css
@@ -1,63 +1,186 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url('https://fonts.cdnfonts.com/css/miama');
 
 .inter-font {
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;}
-
-
-  /* shared styles */
-.display-flex{ 
-    display: flex;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
 }
-.text-color{
-    color: white;
-}
-.primary-color{
-background-color: rgb(230, 83, 60);
-
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.bg-light{
-    background-color: rgb(17, 17, 17);
-
+/* shared styles */
+.width-body {
+  max-width: 1440px;
+}
+.display-flex {
+  display: flex;
+}
+.text-color {
+  color: rgb(255, 255, 255);
+}
+.primary-color {
+  background-color: rgb(230, 83, 60);
+}
+.btn-primary {
+  padding: 15px 40px;
+  border-radius: 42px;
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: rgb(255, 255, 255);
+  border: none;
 }
 
-  /* navbar related styles */
+.bg-light {
+  background-color: rgb(17, 17, 17);
+}
 
+/* navbar related styles */
 
+/* #navbar{ margin-top: 100px;} */
 
-  .navbar-container {
-    max-width: 1060px;
-    margin: 0 auto;
-    justify-content: space-between;
-    align-items: center;
-    
-    /* padding: 20px ; */
+.navbar-container {
+  max-width: 1060px;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  /* margin-top: 100px; */
+  /* border: 2px solid red; */
+  padding: 50px 0;
+  /* border: 2px solid red; */
 
-  }
-  .fitness-color{color: rgb(230, 83, 60);
+  /* padding: 20px ; */
+}
+.fitness-color {
+  color: rgb(230, 83, 60);
   margin-left: 25px;
-  }
-  .bar{ margin-right: 25px;
+}
+.bar {
+  margin-right: 25px;
   display: none;
-  }
-  .home{ background-color: rgb(230, 83, 60);
+}
+.home {
+  background-color: rgb(230, 83, 60);
   padding: 8px 20px;
   border-radius: 10px;
-  }
-  
-  .nav-item{
-    list-style: none;
-    margin-right: 30px;
-  }
-  .nav-link{
-    text-decoration: none;
-font-weight: 400px;
+}
 
-  }
-  .navbar, .banner{
-    max-width:1440px;
-    margin: 0 auto;
-  }
+.nav-item {
+  list-style: none;
+  margin-right: 30px;
+}
+.nav-link {
+  text-decoration: none;
+  font-weight: 400px;
+}
+
+/* banner styles start here */
+.banner-container {
+  max-width: 1060px;
+  margin: 0 auto;
+  /* border: 2px solid green; */
+  justify-content: space-between;
+}
+.banner-text {
+  width: 56%;
+  /* border: 2px solid red; */
+}
+.banner-title {
+  width: 86%;
+  /* border: 2px solid blueviolet; */
+  color: rgb(255, 255, 255);
+  font-size: 4rem;
+  font-weight: 900;
+  text-align: left;
+}
+#shape-style{
+  font-family: 'Miama';
+  font-size:4rem ;
+  font-weight: 500;
+
+}
+.banner-description{
+  color: rgba(255, 255, 255, 0.5);
+font-size: 1rem;
+font-weight: 400;
+text-align: left;
+margin-top: 28px;
+}
+.btn-responsive{
+  display: flex;
+ 
+}
+.btn-black{
+background-color:black;
+border: 1px solid rgb(255, 255, 255);
+margin-left: 14px;
+}
+
+.banner-img {
+  width: 33%;
+  /* border: 2px solid yellow; */
+  position: relative;
+}
+.banner-img img {
+  width: 100%;
+}
+.video-tutorial{
+  width: max-content;
+  background-color: rgba(63, 62, 62, 0.507);
+  /* background: transparent; */
+  padding:20px 30px ;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  position: absolute;
+  top: 60%;
+  right: 75%;
+
+}
+.circle{
+  width:40px;
+  height: 40px;
+  border-radius: 50%;
+  border: none;
+  background-color: rgb(230, 83, 60);
+  margin-right: 8px;
+}
+.three-fifty{
+  color: rgb(250, 250, 249);
+font-size: 1.5rem;
+font-weight: 900;
+
+}
+.vt{
+  color: rgba(239, 237, 232, 0.65);
+  font-size: 1rem;
+  font-weight: 400;
+  margin-top: 8px;
+}
+.workout-videos{
+  width: max-content;
+  background-color: rgba(63, 62, 62, 0.507);
+  padding: 20px 25px;
+  border-radius: 10px;
+ text-align: center;
+ position: absolute;
+ top: 20%;
+ left: 65%;
+}
+.five-hundred{
+  color: rgb(255, 255, 255);
+font-size: 2.5rem;
+font-weight: 900;
+
+}
+.workout-video{
+  color: rgba(255, 255, 255, 0.65);
+font-size: 0.9rem;
+font-weight: 400;
+margin-top: 8px;
+
+}
