--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,8 @@
 .width-body {
   max-width: 1440px;
 }
+
+
 .display-flex {
   display: flex;
 }
@@ -37,6 +39,11 @@
 .bg-light {
   background-color: rgb(17, 17, 17);
 }
+main> section{
+  max-width: 1440px;
+
+}
+
 
 /* navbar related styles */
 
@@ -137,8 +144,8 @@ margin-left: 14px;
   align-items: center;
   text-align: center;
   position: absolute;
-  top: 60%;
-  right: 75%;
+  top: 70%;
+  right: 77%;
 
 }
 .circle{
@@ -182,5 +189,67 @@ font-weight: 900;
 font-size: 0.9rem;
 font-weight: 400;
 margin-top: 8px;
+
+}
+
+/* habits section style start here */
+
+  .habits{
+    max-width: 1060px;
+    margin: 0 auto; 
+    align-items: center;
+  }
+  .habits-text-container{
+text-align: center;
+padding-top: 100px;
+
+
+  }
+.habits-section-title{
+  color: rgb(255, 255, 255);
+  font-size: 3rem;
+  font-weight: 900;
+  
+}
+.habits-section-description{
+  color: rgba(255, 255, 255, 0.5);
+font-size: 0.9rem;
+font-weight: 400;
+margin-top: 14px;
+}
+.habits-img-container{
+display: grid;
+/* grid-template-rows: repeat(4,1fr); */
+grid-template-columns: repeat(4, 1fr);
+margin-top: 55px;
+
+}
+.card{
+  padding: 10px;
+  text-align: center;
+ 
+  
+}
+.card img{
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: 60%;
+ 
+}
+.child-container{
+  margin-top: 30px;
+  text-align: center;
+}
+
+.child-1{color: rgb(255, 255, 255);
+  font-size: 1.1rem;
+  font-weight: 600;
+
+}
+.child-2{
+  color: rgba(255, 255, 255, 0.5);
+  font-family: Inter;
+  font-size: 0.9rem;
+  font-weight: 400;
+  margin-top: 8px;
 
 }
