--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@
 }
 main> section{
   max-width: 1440px;
-
+background-color: black;
 }
 
 
@@ -252,4 +252,50 @@ margin-top: 55px;
   font-weight: 400;
   margin-top: 8px;
 
+}
+
+/* RUN SECTION STYLES STARTS HERE */
+.run-section-container{
+  max-width: 1060px;
+  margin: 0 auto;
+  background-color:rgb(34, 34, 34);
+    /* border: 2px solid red; */
+  justify-content: space-around;
+  display: flex;
+ padding-bottom:30px ;
+
+ 
+}
+.run-section-text{
+  width: 30%;
+  margin-top: 48px;
+  /* border: 2px solid green; */
+}
+.run-section-text h1{
+  color: rgb(255, 255, 255);
+  font-size: 3rem;
+  font-weight: 900;
+
+}
+.run-section-text p{
+  color: rgba(255, 255, 255, 0.5);
+font-size: 0.9rem;
+font-weight: 400;
+margin-top: 14px;
+margin-bottom: 35px;
+}
+
+.run-section-img{
+  width: 45%;
+ 
+  margin-top: 40px;
+  /* border: 2px solid; */
+}
+
+.run-section-img img{
+  width: 100%;
+object-fit: none;
+object-position: 70% 30%;
+border-radius: 10px;
+  
 }
