--- a/styles/style.css
+++ b/styles/style.css
@@ -299,3 +299,165 @@ object-position: 70% 30%;
 border-radius: 10px;
   
 }
+
+/* BMI CALCULATOR SECTION STYLES START HERE */
+
+.bmi-calculator-section{
+  max-width: 670px;
+  margin: 0 auto;
+  /* border: 2px solid red; */
+  padding-bottom: 60px;
+
+}
+.bmi-chart{
+  width: 30%;
+}
+.bmi-title{
+  color: rgb(255, 255, 255);
+font-size:3rem;
+font-weight: 900;
+}
+.bmi-description{
+  color: rgba(255, 255, 255, 0.5);
+font-size: 0.9rem;
+font-weight: 400;
+margin-top: 14px;
+}
+.bmi-section{
+  max-width: 1060px;
+  border: 2px solid red;
+  margin: 0 auto;
+  padding-top: 50px;
+  justify-content: space-between;
+}
+.bmi-chart h4{
+  color: rgb(255, 255, 255);
+font-size:1.8rem;
+font-weight: 900;
+
+}
+
+table{
+  border-collapse: collapse;
+margin-top: 50px;
+}
+th{
+color: rgb(255, 255, 255);
+font-size: 1rem;
+font-weight: 500;
+}
+td{
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 0.9rem;
+  font-weight: 400;
+
+}
+td, th{
+  border: 1px solid rgba(80, 79, 79, 0.308);
+  padding: 10px 20px;
+}
+.calculate-bmi h4{
+  color: rgb(255, 255, 255);
+  font-size:1.8rem;
+  font-weight: 900;
+  border: 2px solid purple;
+  width: max-content;
+}
+.calculate-bmi p{
+ 
+color: rgba(255, 255, 255, 0.5);
+font-size: 0.9rem;
+font-weight: 400;
+
+}
+.input-file{
+  padding: 10px ;
+  border-radius: 8px;
+  color:rgba(255, 255, 255, 0.6); 
+
+background: rgba(255, 255, 255, 0.1);
+}
+.calculate-bmi{
+ width: 54%;
+}
+
+.form-style{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  /* padding: 33px; */
+  gap: 20px;
+  margin-top: 34px;
+  margin-bottom: 34px;
+  
+}
+.child-5{
+  grid-column: 1/span 2;
+}
+/* TEAM SECTION STYLES STARTS HERE */
+
+.team-section{
+  max-width: 1060px;
+  border: 2px solid tomato;
+  margin: 0 auto;
+
+}
+.team-section-text{
+  max-width: 670px;
+  border: 2px solid purple;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 80px;
+}
+.team-section-text h1{
+  color: rgb(255, 255, 255);
+font-size: 3rem;
+font-weight: 900;
+}
+.team-section-text p{
+  color: rgba(255, 255, 255, 0.5);
+font-size: 0.9rem;
+font-weight: 400;
+margin-top: 14px;
+}
+.team-section-img{
+  max-width: 1060px;
+  border-radius: 18px;
+  margin-top: 55px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+ grid-gap: 10px;
+  padding: 12px 12px 12px 12px;
+  
+
+background: rgba(255, 255, 255, 0.1);
+}
+.team-img{
+  max-width: 325px;
+ 
+  position: relative;
+}
+.team-img img{
+  width: 100%;
+  border-radius:15px;
+  
+}
+.img-text{
+  position: absolute;
+  top: 70%;
+  left: 8%;
+}
+
+.img-text h5{
+color:rgb(255, 255, 255) ;
+font-size: 1.5rem;
+font-weight: 900;
+margin-bottom: 10px;
+}
+.img-text span{
+
+  color:rgba(255, 255, 255, 0.5) ;
+  font-size: 1rem;
+  font-weight: 400;
+
+
+}
