--- a/styles/style.css
+++ b/styles/style.css
@@ -311,6 +311,7 @@ border-radius: 10px;
 }
 .bmi-chart{
   width: 30%;
+  border: 2px solid orange;
 }
 .bmi-title{
   color: rgb(255, 255, 255);
@@ -379,6 +380,8 @@ background: rgba(255, 255, 255, 0.1);
 }
 .calculate-bmi{
  width: 54%;
+ border: 2px solid palevioletred;
+ 
 }
 
 .form-style{
@@ -388,6 +391,7 @@ background: rgba(255, 255, 255, 0.1);
   gap: 20px;
   margin-top: 34px;
   margin-bottom: 34px;
+  border: 2px solid rgb(0, 255, 0);
   
 }
 .child-5{
@@ -451,7 +455,7 @@ background: rgba(255, 255, 255, 0.1);
 color:rgb(255, 255, 255) ;
 font-size: 1.5rem;
 font-weight: 900;
-margin-bottom: 10px;
+margin-bottom: 5px;
 }
 .img-text span{
 
@@ -460,4 +464,79 @@ margin-bottom: 10px;
   font-weight: 400;
 
 
+}
+/* footer section styles  start here */
+footer{
+  max-width: 1440px;
+  background-color: black;
+}
+
+.footer-container{
+  max-width: 1440px;
+  /* border: 2px solid red; */
+  margin: 0 auto;
+ 
+  background-color: rgba(255, 255, 255, 0.1);
+  
+
+
+}
+.footer-main {
+  max-width: 1060px;
+  margin: 0 auto;
+  /* border: 2px solid green; */
+  justify-content: space-between;
+}
+.fitness{
+  max-width: 340px;
+  /* border: 2px solid purple; */
+
+}
+.fit{
+ margin-left: 0;
+}
+.get-started-container {
+  max-width: 510px;
+   /* border: 2px solid blue; */
+   justify-content: space-between;
+}
+.get-started-1{
+  width: max-content;
+  /* border: 2px solid gold; */
+  margin-right: 100px;
+}
+.get{
+  color: rgb(255, 255, 255);
+
+font-size: 2rem;
+font-weight: 700;
+}
+.get-started-1 p{
+  color: rgba(255, 255, 255, 0.5);
+margin-top: 10px;
+font-size: 23px;
+font-weight: 400;
+}
+.get-started-2 p{
+  color: rgba(255, 255, 255, 0.5);
+  margin-top: 10px;
+  font-size: 23px;
+  font-weight: 400;
+
+}
+
+.copy-right{
+  
+  max-width: 1060px;
+  margin: 0 auto;
+  text-align: center;
+  padding: 30px;
+  color: rgba(255, 255, 255, 0.5);
+ 
+  
+}
+.copy-right hr{
+  margin-bottom:30px ;
+  border: 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.205);
 }
