--- a/styles/style.css
+++ b/styles/style.css
@@ -267,7 +267,8 @@ margin-top: 55px;
     /* border: 2px solid red; */
   justify-content: space-around;
   display: flex;
- padding-bottom:30px ;
+ padding:30px ;
+ border-radius: 15px;
 
  
 }
@@ -428,15 +429,16 @@ margin-top: 14px;
   margin-top: 55px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
- grid-gap: 10px;
-  padding: 12px 9px 12px 15px;
+ grid-gap: 15px;
+  padding: 20px 0px;
   
 
 background: rgba(255, 255, 255, 0.1);
 }
 .team-img{
-  max-width: 326px;
+  max-width: 340px;
    position: relative;
+   
 }
 .team-img img{
   width: 100%;
