--- a/styles/style.css
+++ b/styles/style.css
@@ -329,7 +329,7 @@ border-radius:15px ;
   color:rgb(255, 255, 255) ;
   font-size: 2.5rem;
   font-weight: 900;
-  margin-top: 50px;
+  margin: 30px 0px;
 
 }
 .workout-text p{
