--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -115,10 +115,14 @@ table{
  
   grid-template-columns: repeat(1,1fr);
 margin: 20px;
+justify-content: center;
+align-items: center;
  }
  .team-img{
-  width: 100%;
-  margin: 0 auto;
+  width: 90%;
+   margin: 0 auto;
+
+  
  }
  .footer-main{
   flex-direction: column;
@@ -172,12 +176,14 @@ align-items: center;
 
 }
 
-@media screen and (min-width:576px) and (max-width:992px) {
+@media screen and (min-width:576px) and (max-width:1024px) {
  
   .banner-container{
     flex-direction: column;}
     .banner-text{
-      width: 90%;}
+      width: 90%;
+      margin-left: 20px;
+    }
       .banner-img{
         width: 50%;
         margin: 0 auto;
@@ -240,6 +246,27 @@ align-items: center;
      /* padding-bottom: 10px; */
       
      }
+     .team-img{
+      width: 90%;
+       margin: 0 auto;
     
+      
+     }
+     .team-section-img{
+ 
+         margin: 20px;
+    justify-content: center;
+    align-items: center;
+     }
+     .footer-main{
+margin: 20px;
+     }
+     .bmi-section{
+     margin: 0 20px;
+      
+     
+    
+     /* padding: 30px; */
+    }
 }
 
